[project]
name = "lfs_help_plugin"
version = "1.0.0"
description = "Keyboard shortcuts and reference panel for LichtFeld Studio"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = ""

[tool.lichtfeld.plugin]
label = "Help"
description = "Keyboard shortcuts reference and help panel for LichtFeld Studio 0.5.2"
