[project]
name = "lfs_help_plugin"
version = "0.0.0"
description = "Keyboard shortcuts and reference panel for LichtFeld Studio"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/bgofish/LFS_Help_Plugin"

[tool.lichtfeld.plugin]
hot_reload = true
plugin_api = ">=1,<2"
lichtfeld_version = ">=0.4.2"
required_features = []
